Merp yeni versiyon//Fatura Giriş

--- a/MERP_V2/MERP_V2/AnaEkran.resx
+++ b/MERP_V2/MERP_V2/AnaEkran.resx
@@ -123,13 +123,58 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>164, 17</value>
   </metadata>
-  <metadata name="timerPanel.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>279, 17</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAAFOSURBVHhe7dmhLwdhHMfxm6BoppgmaDZTzWaKZpomaJqi
+        aZrkL/AH/KIsaJqm6KqmCHh/NuF2e8L3mu15v7Z3+6XPjnvubpAkSZIkSZIkSZL0Xx3TotAdLVP3luie
+        fgo90Ap1L6PlCmqNNO2JHO3PLbVGmvZMayTc0De1hhr3QqskXFFrpGlvtEHCJVWutIy2ScI5VUZ7py0S
+        qqN90C4JJ/RFraHGZbQ9EqqjfdIBCUeUQVpDjctv8sgl5OqpjJarMVelUB0tN4vcNIQM0RppWkbbp67l
+        zJWzV2ugaXk+7dqcsa4pb0K6NWesPI92Laf4HExb44zzHz12qDJWjhJn1DXPXTNUx8pvun8cyqNNZaz8
+        qR5S1+a8nej+lc4pVcbK8WKbuuYb1hkuqDKWHz5Q/UqUT2vr1LXcDV8LPZLfISVJkiRJkiRJkiR1bBh+
+        AaJ3KOdXayf/AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADr0AAA69AUf7kK0AAAFOSURBVHhe7dmhLwdhHMfxm6BoppgmaDZTzWaKZpomaJqi
+        aZrkL/AH/KIsaJqm6KqmCHh/NuF2e8L3mu15v7Z3+6XPjnvubpAkSZIkSZIkSZL0Xx3TotAdLVP3luie
+        fgo90Ap1L6PlCmqNNO2JHO3PLbVGmvZMayTc0De1hhr3QqskXFFrpGlvtEHCJVWutIy2ScI5VUZ7py0S
+        qqN90C4JJ/RFraHGZbQ9EqqjfdIBCUeUQVpDjctv8sgl5OqpjJarMVelUB0tN4vcNIQM0RppWkbbp67l
+        zJWzV2ugaXk+7dqcsa4pb0K6NWesPI92Laf4HExb44zzHz12qDJWjhJn1DXPXTNUx8pvun8cyqNNZaz8
+        qR5S1+a8nej+lc4pVcbK8WKbuuYb1hkuqDKWHz5Q/UqUT2vr1LXcDV8LPZLfISVJkiRJkiRJkiR1bBh+
+        AaJ3KOdXayf/AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_grafik.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADr4AAA6+AepCscAAAAFOSURBVHhe7dmhLwdhHMfxm6BoppgmaDZTzWaKZpomaJqi
+        aZrkL/AH/KIsaJqm6KqmCHh/NuF2e8L3mu15v7Z3+6XPjnvubpAkSZIkSZIkSZL0Xx3TotAdLVP3luie
+        fgo90Ap1L6PlCmqNNO2JHO3PLbVGmvZMayTc0De1hhr3QqskXFFrpGlvtEHCJVWutIy2ScI5VUZ7py0S
+        qqN90C4JJ/RFraHGZbQ9EqqjfdIBCUeUQVpDjctv8sgl5OqpjJarMVelUB0tN4vcNIQM0RppWkbbp67l
+        zJWzV2ugaXk+7dqcsa4pb0K6NWesPI92Laf4HExb44zzHz12qDJWjhJn1DXPXTNUx8pvun8cyqNNZaz8
+        qR5S1+a8nej+lc4pVcbK8WKbuuYb1hkuqDKWHz5Q/UqUT2vr1LXcDV8LPZLfISVJkiRJkiRJkiR1bBh+
+        AaJ3KOdXayf/AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>704, 17</value>
+  </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>599, 17</value>
+  </metadata>
+  <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>704, 17</value>
+  </metadata>
+  <metadata name="miniToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>389, 3</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>51</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAACQAABEXAAARFwAAAAAAAAAA
