--- a/MERP_V2/MERP_V2/Properties/Resources.resx
+++ b/MERP_V2/MERP_V2/Properties/Resources.resx
@@ -139,19 +139,100 @@
   <data name="appbar_paperclip_rotated" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\appbar.paperclip.rotated.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="appbar.lines.horizontal.4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\appbar.lines.horizontal.4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="appbar_question" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\appbar.question.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Picture1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Picture1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="appbar_cabinet_files" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\appbar.cabinet.files.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Picture2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Picture2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="if_bomb_1055109" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_bomb_1055109.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_browser_1055104" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_browser_1055104.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_calendar_1055101__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_calendar_1055101 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_cart_1055098" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_cart_1055098.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_check_1055094" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_check_1055094.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_compose_1055085" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_compose_1055085.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_easel_1055067" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_easel_1055067.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_megaphone_1055028" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_megaphone_1055028.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_piechart_1055011" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_piechart_1055011.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_pin_1055010" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_pin_1055010.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_power_1055002" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_power_1055002.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_rocket_1054990" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_rocket_1054990.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_trends_1054952" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_trends_1054952.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="appbar_chevron_left" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\appbar.chevron.left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="appbar_chevron_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\appbar.chevron.right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cokaciil" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cokaciil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="grafik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\grafik.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_4_1320813" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_4_1320813.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_7_1320810" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_7_1320810.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Alarm_728899" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Alarm_728899.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_BarChart_728905" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_BarChart_728905.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Calendar_728916" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Calendar_728916.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Fire_728986" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Fire_728986.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Info_728979" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Info_728979.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Lightbulb_728950" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Lightbulb_728950.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Money_728958" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Money_728958.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_News_728959" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_News_728959.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_PieChart_728965" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_PieChart_728965.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_Pin_728961" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_Pin_728961.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="malvefatu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\malvefatu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
