--- a/MERP_V2/MERP_V2/Properties/Resources.resx
+++ b/MERP_V2/MERP_V2/Properties/Resources.resx
@@ -235,4 +235,7 @@
   <data name="malvefatu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\malvefatu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="appbar_printer_text" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\appbar.printer.text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
