--- a/MERP_V2/MERP_V2/Projeler.resx
+++ b/MERP_V2/MERP_V2/Projeler.resx
@@ -164,13 +164,16 @@
     <value>528, 17</value>
   </metadata>
   <data name="mySqlCommandListele.CommandText" xml:space="preserve">
-    <value>SELECT proje_id as ID, proje_no as ProjeNo,proje_ismi as Projeİsmi,proje_butce as Bütçe,proje_birim as Birim,proje_euro as EURO,proje_dolar as DOLAR,proje_tl as TL,proje_musteri as Müşteri,proje_baslangic as Başlangıç,proje_bitis as Bitiş,proje_vade as Vade,proje_aciklama as Açıklama,harcama_toplam as Harcama,harcama_toplam_birim as HarcamaBirim,proje_tipi as Tip FROM db_projeler;</value>
+    <value>SELECT proje_id as ID, proje_no as ProjeNo,proje_ismi as Projeİsmi,proje_butce as Bütçe,proje_birim as Birim,proje_euro as EURO,proje_dolar as DOLAR,proje_tl as TL,proje_musteri as Müşteri,proje_baslangic as Başlangıç,proje_bitis as Bitiş,proje_vade as Vade,proje_aciklama as Açıklama,harcama_toplam as Harcama,harcama_toplam_birim as HarcamaBirim,proje_tipi as Tip, proje_durum as Durum FROM db_projeler;</value>
   </data>
   <metadata name="mySqlCommand.DesignTimeVisible" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
   <metadata name="mySqlCommand.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>704, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>42</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
